--- a/index.html
+++ b/index.html
@@ -90,29 +90,29 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/02.png" class="img-responsive">
+                    <img src="img/about.jpg" class="img-responsive">
                 </div>
                 <div class="col-md-6">
                     <div class="about-text">
                         <div class="section-title">
-                            <h4>About us</h4>
-                            <h2>Some words <strong>about us</strong></h2>
+                            <h4>About CNULion</h4>
+                            <h2>배우고 <strong>만듭니다</strong></h2>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
-                        <p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>
+                        <p class="intro">전국적으로 확대된 지난 멋쟁이 사자 처럼은 이제 각 대학별로 운영됩니다. 충남대학교의 비전공 학생들과 전공 학생들이 함께 어울려 웹서비스 개발을 배우고 만들고 직접 서비스합니다.</p>
                         <ul class="about-list">
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Mission</strong> - <em>We deliver uniqueness and quality</em>
+                                <strong>STUDY</strong> - <em>HTML/CSS부터 jQuery와 같은 프론트엔드 기술과 ruby/rails와 같은 Web Framework를 공부합니다.</em>
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Skills</strong> - <em>Delivering fast and excellent results</em>
+                                <strong>SERVICE</strong> - <em>평소에 "이런 IT 서비스를 꼭 만들어 보고 싶었다." 라고 생각했던 것들을 본인이 직접 구현합니다.</em>
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Clients</strong> - <em>Satisfied clients thanks to our experience</em>
+                                <strong>NETWORK</strong> - <em>나와 비슷한 생각을 가진 대학교 친구들을 만날 수 있습니다.</em>
                             </li>
                         </ul>
                     </div>
