--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <div class="col-md-6">
                     <div class="about-text">
                         <div class="section-title">
-                            <h4>About CNULion</h4>
-                            <h2>배우고 <strong>만듭니다</strong></h2>
+                            <h4>About</h4>
+                            <h3>배우고 <strong>만듭니다</strong></h3>
                             <hr>
                             <div class="clearfix"></div>
                         </div>
@@ -104,15 +104,15 @@
                         <ul class="about-list">
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>STUDY</strong> - <em>HTML/CSS부터 jQuery와 같은 프론트엔드 기술과 ruby/rails와 같은 Web Framework를 공부합니다.</em>
+                                <strong>STUDY</strong> - HTML/CSS부터 jQuery와 같은 프론트엔드 기술과 ruby/rails와 같은 Web Framework를 공부합니다.
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>SERVICE</strong> - <em>평소에 "이런 IT 서비스를 꼭 만들어 보고 싶었다." 라고 생각했던 것들을 본인이 직접 구현합니다.</em>
+                                <strong>SERVICE</strong> - 평소에 "이런 IT 서비스를 꼭 만들어 보고 싶었다." 라고 생각했던 것들을 본인이 직접 구현합니다.
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>NETWORK</strong> - <em>나와 비슷한 생각을 가진 대학교 친구들을 만날 수 있습니다.</em>
+                                <strong>NETWORK</strong> - 나와 비슷한 생각을 가진 대학교 친구들을 만날 수 있습니다.
                             </li>
                         </ul>
                     </div>
