--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/about.jpg" class="img-responsive">
+                    <img src="img/about02.png" class="img-responsive">
                 </div>
                 <div class="col-md-6">
                     <div class="about-text">
