--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         </div>
     </div>
 
-    <!-- Team Page
+    <!-- Team Page 정식이형 윤섭형 준태형 상훈이형 태우형 규진이형 성호형 민영 호현
     ==========================================-->
     <div id="tf-team" class="text-center">
         <div class="overlay">
             <div class="container">
                 <div class="section-title center">
-                    <h2>Meet <strong>our team</strong></h2>
+                    <h2>멋쟁이 사자 처럼 3기 <strong>충남대학교</strong></h2>
                     <div class="line">
                         <hr>
                     </div>
@@ -138,9 +138,9 @@
                         <div class="thumbnail">
                             <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>유정식</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -149,9 +149,9 @@
                         <div class="thumbnail">
                             <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>송윤섭</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -160,9 +160,9 @@
                         <div class="thumbnail">
                             <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>엄준태</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -171,20 +171,20 @@
                         <div class="thumbnail">
                             <img src="img/team/04.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>이상훈</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/04.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>김태우</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -193,9 +193,9 @@
                         <div class="thumbnail">
                             <img src="img/team/01.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>사규진</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -204,9 +204,9 @@
                         <div class="thumbnail">
                             <img src="img/team/02.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                               <h3>유성호</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -215,9 +215,20 @@
                         <div class="thumbnail">
                             <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>Jenn Gwapa</h3>
-                                <p>CEO / Founder</p>
-                                <p>Do not seek to change what has come before. Seek to create that which has not.</p>
+                                <h3>안민영</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="item">
+                        <div class="thumbnail">
+                            <img src="img/team/03.jpg" alt="..." class="img-circle team-img">
+                            <div class="caption">
+                                <h3>김호현</h3>
+                                <p>직책 / 직급</p>
+                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
