--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img">
+                            <a href="https://www.facebook.com/taewoo.kim.3910829" target="_blank"><img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img"></a>
                             <div class="caption">
                                 <h3>김태우</h3>
-                                <p>직책 / 직급</p>
-                                <p>하고 싶은 말 한마디</p>
+                                <p>컴퓨터공학과 / 4학년</p>
+                                <p>Be a tail to lions rather than a head foxes. -Talmud</p>
                             </div>
                         </div>
                     </div>
