--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <a href="https://www.facebook.com/taewoo.kim.3910829" target="_blank"><img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img"></a>
+                            <img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img"><a href="https://www.facebook.com/taewoo.kim.3910829" target="_blank"></a></img>
                             <div class="caption">
                                 <h3>김태우</h3>
                                 <p>컴퓨터공학과 / 4학년</p>
