--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                     </div>
 
                     <div class="item">
-                        <a href="https://www.facebook.com/taewoo.kim.3910829" target="_blank"><div class="thumbnail">
+                            <div class="thumbnail">
                             <img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <h3>김태우</h3>
+                                <a href="https://www.facebook.com/taewoo.kim.3910829" target="_blank"><h3>김태우</h3></a>
                                 <p>컴퓨터공학과 / 4학년</p>
                                 <p>Be a tail to lions rather than a head foxes. -Talmud</p>
                             </div>
-                        </div></a>
+                        </div>
                     </div>
 
                     <div class="item">
