--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li><a href="#tf-home" class="page-scroll">Home</a></li>
             <li><a href="#tf-about" class="page-scroll">About</a></li>
             <li><a href="#tf-team" class="page-scroll">Team</a></li>
-            <li><a href="#tf-services" class="page-scroll">Services</a></li>
+            <li><a href="#tf-services" class="page-scroll">Schedule</a></li>
             <li><a href="#tf-works" class="page-scroll">Portfolio</a></li>
             <li><a href="#tf-testimonials" class="page-scroll">Testimonials</a></li>
             <li><a href="#tf-contact" class="page-scroll">Contact</a></li>
@@ -238,42 +238,46 @@
         </div>
     </div>
 
-    <!-- Services Section
+    <!-- SCEDULES Section
     ==========================================-->
     <div id="tf-services" class="text-center">
         <div class="container">
             <div class="section-title center">
-                <h2>Take a look at <strong>our services</strong></h2>
+                <h2><strong>SCEHDULE</strong></h2>
                 <div class="line">
                     <hr>
                 </div>
                 <div class="clearfix"></div>
-                <small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>
+                <small><em>2016년 멋쟁이 사자처럼은 다음과 같이 진행됩니다.</em></small>
             </div>
             <div class="space"></div>
             <div class="row">
                 <div class="col-md-3 col-sm-6 service">
+                    <i class="fa fa-bullhorn"></i>
+                    <h4><strong>멋사 4기 선발</strong></h4>
+                    <p>16.03.01 ~ 16.03.31</p>
+                    <p>2016년 3월 1일부터 시작하여, 3월 한달 동안 지원을 받고 인원을 선발합니다.</p>
+                </div>
+
+                <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-desktop"></i>
-                    <h4><strong>Web design</strong></h4>
-                    <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    <h4><strong>수업진행</strong></h4>
+                    <p>16.04.01 ~ 16.06.30</p>
+                    <p>3개월동안 웹 서비스를 개발하는 데에 필요한 것들을 배웁니다. </p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 service">
-                    <i class="fa fa-mobile"></i>
-                    <h4><strong>Mobile Apps</strong></h4>
-                    <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-                </div>
-
-                <div class="col-md-3 col-sm-6 service">
-                    <i class="fa fa-camera"></i>
-                    <h4><strong>Photography</strong></h4>
-                    <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    <i class="fa fa-desktop"></i>
+                    <h4><strong>프로젝트 개발</strong></h4>
+                    <p>16.07.01 ~ 16.08.31</p>
+                    <p>만들고 싶은 웹 서비스를 개발합니다.</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-bullhorn"></i>
-                    <h4><strong>Marketing</strong></h4>
-                    <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    <h4><strong>멋사 5기 선발</strong></h4>
+                    <p>16.09.01 ~ 16.09.31</p>
+                    <p>멋쟁이 사자처럼을 이어 갈 사람들을 선발합니다.</p>
                 </div>
             </div>
         </div>
