--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
                 <div id="clients" class="owl-carousel owl-theme">
                     <div class="item">
-                        <img src="img/client/01.png">
+                        <img src="img/sponsers/gc.png">
                     </div>
                     <div class="item">
                         <img src="img/client/02.png">
