--- a/index.html
+++ b/index.html
@@ -300,22 +300,28 @@
                         <img src="img/sponsers/gc.png">
                     </div>
                     <div class="item">
-                        <img src="img/client/02.png">
+                        <img src="img/sponsers/ym.png">
                     </div>
                     <div class="item">
-                        <img src="img/client/03.png">
+                        <img src="img/sponsers/vg.png">
                     </div>
                     <div class="item">
-                        <img src="img/client/04.png">
+                        <img src="img/sponsers/ba.jpg">
                     </div>
                     <div class="item">
-                        <img src="img/client/05.png">
+                        <img src="img/sponsers/pellue.png">
                     </div>
                     <div class="item">
-                        <img src="img/client/06.png">
+                        <img src="img/sponsers/js.png">
                     </div>
                     <div class="item">
-                        <img src="img/client/07.png">
+                        <img src="img/sponsers/tc.png">
+                    </div>
+                    <div class="item">
+                        <img src="img/sponsers/bp.png">
+                    </div>
+                    <div class="item">
+                        <img src="img/sponsers/bc.png">
                     </div>
                 </div>
 
