--- a/index.html
+++ b/index.html
@@ -303,22 +303,16 @@
                         <img src="img/sponsers/ym.png">
                     </div>
                     <div class="item">
-                        <img src="img/sponsers/vg.png">
+                        <img src="img/sponsers/vg.jpg">
                     </div>
                     <div class="item">
-                        <img src="img/sponsers/ba.jpg">
+                        <img src="img/sponsers/ba.png">
                     </div>
                     <div class="item">
                         <img src="img/sponsers/pellue.png">
                     </div>
                     <div class="item">
                         <img src="img/sponsers/js.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/tc.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/bp.png">
                     </div>
                     <div class="item">
                         <img src="img/sponsers/bc.png">
