--- a/index.html
+++ b/index.html
@@ -297,25 +297,7 @@
                 </div>
                 <div id="clients" class="owl-carousel owl-theme">
                     <div class="item">
-                        <img src="img/sponsers/gc.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/ym.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/vg.jpg">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/ba.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/pellue.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/js.png">
-                    </div>
-                    <div class="item">
-                        <img src="img/sponsers/bc.png">
+                        <img src="img/sponsers/gcseoul.png">
                     </div>
                 </div>
 
