--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
 
                 <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-bullhorn"></i>
-                    <h4><strong>멋사 5기 선발</strong></h4>
-                    <p>16.09.01 ~ 16.09.31</p>
-                    <p>멋쟁이 사자처럼을 이어 갈 사람들을 선발합니다.</p>
+                    <h4><strong>프로젝트 진행</strong></h4>
+                    <p>16.09.01 ~ 16.12.31</p>
+                    <p>팀원들과 함께 웹 서비스 개발을 진행합니다.</p>
                 </div>
             </div>
         </div>
@@ -290,17 +290,24 @@
             <div class="container">
 
                 <div class="section-title center">
-                    <h2>Some of <strong>our Clients</strong></h2>
+                    <h2><strong>Sponsers</strong></h2>
                     <div class="line">
                         <hr>
                     </div>
                 </div>
                 <div id="clients" class="owl-carousel owl-theme">
-                    <div class="item">
-                        <img src="img/sponsers/gcseoul.png">
-                    </div>
+                        <div class="hover-bg">
+                            <a href="https://www.campus.co/seoul/ko" target="_blank">
+                                <div class="hover-text">
+                                    <h4>구글 캠퍼스</h4>
+                                    <small>스타트업을 위한 캠퍼스</small>
+                                    <div class="clearfix"></div>
+                                    <i class="fa fa-plus"></i>
+                                </div>
+                                <img src="img/sponsers/gcseoul.png" class="img-responsive" alt="...">
+                            </a>
+                        </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -310,45 +317,31 @@
     <div id="tf-works">
         <div class="container"> <!-- Container -->
             <div class="section-title text-center center">
-                <h2>Take a look at <strong>our services</strong></h2>
+                <h2><strong>Services</strong></h2>
                 <div class="line">
                     <hr>
                 </div>
                 <div class="clearfix"></div>
-                <small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>
+                <small><strong>멋쟁이 사자처럼에서 만든 서비스</strong></small>
             </div>
             <div class="space"></div>
-
-            <div class="categories">
-                
-                <ul class="cat">
-                    <li class="pull-left"><h4>Filter by Type:</h4></li>
-                    <li class="pull-right">
-                        <ol class="type">
-                            <li><a href="#" data-filter="*" class="active">All</a></li>
-                            <li><a href="#" data-filter=".web">Web Design</a></li>
-                            <li><a href="#" data-filter=".photography">Photography</a></li>
-                            <li><a href="#" data-filter=".app" >Mobile App</a></li>
-                            <li><a href="#" data-filter=".branding" >Branding</a></li>
-                        </ol>
-                    </li>
-                </ul>
-                <div class="clearfix"></div>
-            </div>
 
             <div id="lightbox" class="row">
 
                 <div class="col-sm-6 col-md-3 col-lg-3 branding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://codelion.net" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>온라인 프로그래밍 교육</small><br>
+                                    <h4>코드라이언</h4>
+                                    <small>한국인터넷진흥원 KISA와 공동프로젝트 진행</small><br>
+                                    <small>NIPA 캠퍼스CEO 프로그램 선정</small><br>
+                                    <small>약 3천 여명이 수강</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/01.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/codelion.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -357,14 +350,17 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 photography app">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://bepro11.com" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>축구 기록 관리 시스템</small><br>
+                                    <h4>Bepro 11</h4>
+                                    <small>아마추어 축구 리그 및 기록 관리 시스템</small><br>
+                                    <small>법인 설립 및 벤처기업 인증</small><br>
+                                    <small>투자 유치 성공</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/02.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/bepro.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -373,14 +369,16 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 branding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://jasoseol.com" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>자기소개서 토탈 솔루션</small><br>
+                                    <h4>자소설닷컴</h4>
+                                    <small>80만개 이상의 자기소개서 보유</small><br>
+                                    <small>투자 유치 성공</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/03.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/jasoseol.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -389,14 +387,14 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 branding">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://shoplink.cc" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>나에게 맞는 상품을 한번에</small><br>
+                                    <h4>Shopling</h4>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/04.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/shoplink.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -405,14 +403,15 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://gangmom.kr" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>학원 정보 플랫폼</small><br>
+                                    <h4>Shopling</h4>
+                                    <small>대치동의 모든 학원소식을 알려드립니다.</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/05.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/gangnam.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -421,14 +420,14 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 app">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://gliter.me" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>뷰티 컨텐츠에서 예약까지</small><br>
+                                    <h4>Gliter</h4>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/06.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/gliter.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -437,14 +436,14 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 photography web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://asia.sentbe.com" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>해외송금을 국내송금처럼</small><br>
+                                    <h4>SENTBE</h4>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/07.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/sentbe.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
@@ -453,14 +452,14 @@
                 <div class="col-sm-6 col-md-3 col-lg-3 web">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="#">
+                            <a href="http://taling.me" target="_blank">
                                 <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
+                                    <small>내 능력이 가치가 되는 곳</small><br>
+                                    <h4>탈잉</h4>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
-                                <img src="img/portfolio/08.jpg" class="img-responsive" alt="...">
+                                <img src="img/portfolio/taling-.png" class="img-responsive" alt="...">
                             </a>
                         </div>
                     </div>
