--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                 <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-bullhorn"></i>
                     <h4><strong>멋사 4기 선발</strong></h4>
-                    <p>16.03.01 ~ 16.03.31</p>
-                    <p>2016년 3월 1일부터 시작하여, 3월 한달 동안 지원을 받고 인원을 선발합니다.</p>
+                    <p>16.03.01 ~ 16.03.11</p>
+                    <p>2016년 3월 2일부터 시작하여 11일까지 지원을 받고 인원을 선발합니다.</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 service">
@@ -275,7 +275,7 @@
                     <i class="fa fa-bullhorn"></i>
                     <h4><strong>프로젝트 진행</strong></h4>
                     <p>16.09.01 ~ 16.12.31</p>
-                    <p>팀원들과 함께 웹 서비스 개발을 진행합니다.</p>
+                    <p>팀원들과 함께 웹 서비스 개발을 계속해서 진행합니다.</p>
                 </div>
             </div>
         </div>
