--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
+                <img src="img/likelion-head.png" width="120px" height="104px">
                 <h1>Welcome on <strong><span class="color">CNULion</span></strong></h1>
                 <p class="lead"><strong>충남대학교 학생들이</strong> 만들고 싶은 IT 서비스를 직접 배워서 <strong>직접 만듭니다</strong></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
@@ -294,17 +295,19 @@
                     </div>
                 </div>
                 <div id="clients" class="owl-carousel owl-theme">
+                    <div class="portfolio-item">
                         <div class="hover-bg">
                             <a href="https://www.campus.co/seoul/ko" target="_blank">
                                 <div class="hover-text">
+                                    <small>스타트업을 위한 캠퍼스</small><br>
                                     <h4>구글 캠퍼스</h4>
-                                    <small>스타트업을 위한 캠퍼스</small>
                                     <div class="clearfix"></div>
                                     <i class="fa fa-plus"></i>
                                 </div>
                                 <img src="img/sponsers/gcseoul.png" class="img-responsive" alt="...">
                             </a>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
