--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
             <li><a href="#tf-about" class="page-scroll">About</a></li>
             <li><a href="#tf-team" class="page-scroll">Team</a></li>
             <li><a href="#tf-services" class="page-scroll">Schedule</a></li>
-            <li><a href="#tf-works" class="page-scroll">Portfolio</a></li>
-            <li><a href="#tf-testimonials" class="page-scroll">Testimonials</a></li>
+            <li><a href="#tf-clients" class="page-scroll">Sponsers</a></li>
+            <li><a href="#tf-works" class="page-scroll">Services</a></li>
+            <li><a href="#tf-testimonials" class="page-scroll">Reviews</a></li>
             <li><a href="#tf-contact" class="page-scroll">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -78,7 +79,6 @@
                 <img src="img/likelion-head.png" width="120px" height="104px">
                 <h1>Welcome on <strong><span class="color">CNULion</span></strong></h1>
                 <p class="lead"><strong>충남대학교 학생들이</strong> 만들고 싶은 IT 서비스를 직접 배워서 <strong>직접 만듭니다</strong></p>
-                <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
     </div>
