proflie updated - juntae

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                             <img src="img/team/001.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>유정식</h3>
-                                <p>직책 / 직급</p>
                                 <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
@@ -149,7 +148,6 @@
                             <img src="img/team/002.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>송윤섭</h3>
-                                <p>직책 / 직급</p>
                                 <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
@@ -157,11 +155,10 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/003.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/juntae_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>엄준태</h3>
-                                <p>직책 / 직급</p>
-                                <p>하고 싶은 말 한마디</p>
+                                <p>의지만 있으면 비전공자도 할 수 있다</p>
                             </div>
                         </div>
                     </div>
@@ -171,7 +168,6 @@
                             <img src="img/team/004.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>이상훈</h3>
-                                <p>직책 / 직급</p>
                                 <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
@@ -181,8 +177,7 @@
                             <div class="thumbnail">
                             <img src="img/team/ktw_profile_img.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
-                                <a href="https://www.facebook.com/taewoo.kim.3910829" target="_blank"><h3>김태우</h3></a>
-                                <p>컴퓨터공학과 / 4학년</p>
+                                <a href="http://eeggii.github.io/" target="_blank"><h3>김태우</h3></a>
                                 <p>Be a tail to lions rather than a head foxes. -Talmud</p>
                             </div>
                         </div>
@@ -193,8 +188,7 @@
                             <img src="img/team/005.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>사규진</h3>
-                                <p>직책 / 직급</p>
-                                <p>하고 싶은 말 한마디</p>
+                                <p>사이먼</p>
                             </div>
                         </div>
                     </div>
@@ -204,7 +198,6 @@
                             <img src="img/team/006.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                <h3>유성호</h3>
-                                <p>직책 / 직급</p>
                                 <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
@@ -215,8 +208,7 @@
                             <img src="img/team/007.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>안민영</h3>
-                                <p>직책 / 직급</p>
-                                <p>하고 싶은 말 한마디</p>
+                                <p>도미닉</p>
                             </div>
                         </div>
                     </div>
@@ -226,7 +218,6 @@
                             <img src="img/team/008.jpg" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>김호현</h3>
-                                <p>직책 / 직급</p>
                                 <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
