--- a/index.html
+++ b/index.html
@@ -476,18 +476,18 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div id="testimonial" class="owl-carousel owl-theme">
                             <div class="item">
-                                <h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-                                <p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
+                                <h5>처음에는 '루비를 배워보자' 라는 생각으로 시작했다가 아이디어톤을 지나 해커톤까지 겪게 되니 멋쟁이 사자처럼은 단순히 코딩을 배우고 웹서비스를 만드는 동아리는 아닌 것을 느꼈습니다. 많은 사람들과 즐겁게 교류하며 아이디어를 다듬고 구체화하는 과정은 오직 멋사에서만 느낄 수 있는 소중한 경험이었습니다.</h5>
+                                <p><strong>김태우</strong>, 주니어 개발자, 힙찔이.</p>
                             </div>
 
                             <div class="item">
-                                <h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-                                <p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
+                                <h5>땅을 다른말로하면 지리구요. 정글을 다른말로하면 오지구요. 아마존을 다른말로하면 씹오지구요</h5>
+                                <p><strong>사규진</strong>, 서버장인, 사이먼.</p>
                             </div>
 
                             <div class="item">
-                                <h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-                                <p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
+                                <h5>싸커퀵 팀원 구합니다.</h5>
+                                <p><strong>안민영</strong>, 싸커퀵 개발자, 도미닉.</p>
                             </div>
                         </div>
                     </div>
