--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div id="testimonial" class="owl-carousel owl-theme">
                             <div class="item">
-                                <h5>처음에는 '루비를 배워보자' 라는 생각으로 시작했다가 아이디어톤을 지나 해커톤까지 겪게 되니 멋쟁이 사자처럼은 단순히 코딩을 배우고 웹서비스를 만드는 동아리는 아닌 것을 느꼈습니다. 많은 사람들과 즐겁게 교류하며 아이디어를 다듬고 구체화하는 과정은 오직 멋사에서만 느낄 수 있는 소중한 경험이었습니다.</h5>
-                                <p><strong>김태우</strong>, 주니어 개발자, 힙찔이.</p>
+                                <h5>비전공자라 코딩에 자신이 없었지만 멋쟁이 사자처럼을 통해 코딩이 재밌어 졌어요. 비전공자도 할 수 있다는 걸 같이 보여 줍니다!!</h5>
+                                <p><strong>엄준태</strong>, 비전공자</p>
                             </div>
 
                             <div class="item">
