--- a/index.html
+++ b/index.html
@@ -476,7 +476,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div id="testimonial" class="owl-carousel owl-theme">
                             <div class="item">
-                                <h5>비전공자라 코딩에 자신이 없었지만 멋쟁이 사자처럼을 통해 코딩이 재밌어 졌어요. 비전공자도 할 수 있다는 걸 같이 보여 줍니다!!</h5>
+                                <h5>비전공자라 코딩에 자신이 없었지만 멋쟁이 사자처럼을 통해 코딩이 재밌어 졌어요.</h5>
+                                <h5>비전공자도 할 수 있다는 걸 같이 보여 줍니다!!</h5>
                                 <p><strong>엄준태</strong>, 비전공자</p>
                             </div>
 
