--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <img src="img/team/juntae_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>엄준태</h3>
-                                <p>의지만 있으면 비전공자도 할 수 있다</p>
+                                <p>의지만 있으면 비전공자도 할 수 있다.</p>
                             </div>
                         </div>
                     </div>
@@ -215,10 +215,10 @@
                     
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/008.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/hh_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>김호현</h3>
-                                <p>하고 싶은 말 한마디</p>
+                                <p>정말 할 수 있습니다.</p>
                             </div>
                         </div>
                     </div>
@@ -476,7 +476,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div id="testimonial" class="owl-carousel owl-theme">
                             <div class="item">
-                                <h5>비전공자라 코딩에 자신이 없었지만 멋쟁이 사자처럼을 통해 코딩이 재밌어 졌어요.</h5>
+                                <h5>비전공자라 코딩에 자신이 없었지만 멋쟁이 사자처럼을 통해 코딩이 재밌어졌어요.</h5>
                                 <h5>비전공자도 할 수 있다는 걸 같이 보여 줍니다!!</h5>
                                 <p><strong>엄준태</strong>, 비전공자</p>
                             </div>
@@ -487,8 +487,11 @@
                             </div>
 
                             <div class="item">
-                                <h5>싸커퀵 팀원 구합니다.</h5>
-                                <p><strong>안민영</strong>, 싸커퀵 개발자, 도미닉.</p>
+                                <h5>경영학과 전공으로 코딩에 대해 아무것도 몰랐지만</h5>
+                                    <h5>서비스를 출시하고자 하는 마음으로 도전 했던 3개월!</h5>
+                                <h5>짧은시간으로 부족한 점도 있지만 눈 앞의 결과물을 보고 나서</h5>
+                                <h5>'정말 할 수 있는구나'라는 생각을 가지게 됐습니다. ㅎㅎ</h5>
+                                <p><strong>김호현</strong>, 경영학과.</p>
                             </div>
                         </div>
                     </div>
