sanghun, yunseob updated

--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/002.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/yunseob_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>송윤섭</h3>
-                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -165,10 +164,9 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/004.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/sanghun_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>이상훈</h3>
-                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
