--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div id="team" class="owl-carousel owl-theme row">
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/001.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/jungsik_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>유정식</h3>
                                 <p>하고 싶은 말 한마디</p>
@@ -183,7 +183,7 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/005.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/gyujin_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>사규진</h3>
                                 <p>사이먼</p>
@@ -193,17 +193,16 @@
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/006.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/sungho_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                <h3>유성호</h3>
-                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="thumbnail">
-                            <img src="img/team/007.jpg" alt="..." class="img-circle team-img">
+                            <img src="img/team/minyoung_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>안민영</h3>
                                 <p>도미닉</p>
@@ -243,15 +242,15 @@
                 <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-bullhorn"></i>
                     <h4><strong>멋사 4기 선발</strong></h4>
-                    <p>16.03.01 ~ 16.03.11</p>
-                    <p>2016년 3월 2일부터 시작하여 11일까지 지원을 받고 인원을 선발합니다.</p>
+                    <p>16.03.02 ~ 16.03.11</p>
+                    <p>2016년 3월 2일부터 시작하여 11일까지 지원을 받고 인원을 선발합니다. 모집 결과는 19일에 발표됩니다.</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-desktop"></i>
                     <h4><strong>수업진행</strong></h4>
-                    <p>16.04.01 ~ 16.06.30</p>
-                    <p>3개월동안 웹 서비스를 개발하는 데에 필요한 것들을 배웁니다. </p>
+                    <p>16.03.21 ~ 16.06.30</p>
+                    <p>21일 오프닝 행사를 시작으로 3개월동안 웹 서비스를 개발하는 데에 필요한 것들을 배웁니다. </p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 service">
@@ -480,8 +479,8 @@
                             </div>
 
                             <div class="item">
-                                <h5>땅을 다른말로하면 지리구요. 정글을 다른말로하면 오지구요. 아마존을 다른말로하면 씹오지구요</h5>
-                                <p><strong>사규진</strong>, 서버장인, 사이먼.</p>
+                                <h5>교육부터 공부 그리고 프로젝트 진행 및 개발, 마지막으로 해커톤까지 어느 것 하나 빠짐없이 귀하고 값진 경험이 됐습니다.</h5>
+                                <p><strong>김태우</strong>, 컴퓨터공학과</p>
                             </div>
 
                             <div class="item">
@@ -489,7 +488,7 @@
                                     <h5>서비스를 출시하고자 하는 마음으로 도전 했던 3개월!</h5>
                                 <h5>짧은시간으로 부족한 점도 있지만 눈 앞의 결과물을 보고 나서</h5>
                                 <h5>'정말 할 수 있는구나'라는 생각을 가지게 됐습니다. ㅎㅎ</h5>
-                                <p><strong>김호현</strong>, 경영학과.</p>
+                                <p><strong>김호현</strong>, 경영학과</p>
                             </div>
                         </div>
                     </div>
@@ -509,6 +508,7 @@
                     <div class="section-title center">
                         <h2><strong>contact us</strong></h2>
                         <div class="line">
+                            <small><em>자세한 사항을 알아보거나 궁금한 것은 아래 페이스북 페이지를 통해 확인 가능합니다.</em></small>
                             <hr>
                         </div>
                         <div class="clearfix"></div>
