--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                             <img src="img/team/jungsik_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>유정식</h3>
-                                <p>하고 싶은 말 한마디</p>
                             </div>
                         </div>
                     </div>
@@ -157,7 +156,7 @@
                             <img src="img/team/juntae_sized.png" alt="..." class="img-circle team-img">
                             <div class="caption">
                                 <h3>엄준태</h3>
-                                <p>의지만 있으면 비전공자도 할 수 있다.</p>
+                                <p>의지만 있으면 비전공자도 할 수 있습니다.</p>
                             </div>
                         </div>
                     </div>
@@ -479,7 +478,8 @@
                             </div>
 
                             <div class="item">
-                                <h5>교육부터 공부 그리고 프로젝트 진행 및 개발, 마지막으로 해커톤까지 어느 것 하나 빠짐없이 귀하고 값진 경험이 됐습니다.</h5>
+                                <h5>교육부터 공부 그리고 프로젝트 진행 및 개발, 마지막으로 해커톤까지</h5>
+                                <h5>어느 것 하나 빠짐없이 귀하고 값진 경험이 됐습니다.</h5>
                                 <p><strong>김태우</strong>, 컴퓨터공학과</p>
                             </div>
 
@@ -508,11 +508,10 @@
                     <div class="section-title center">
                         <h2><strong>contact us</strong></h2>
                         <div class="line">
-                            <small><em>자세한 사항을 알아보거나 궁금한 것은 아래 페이스북 페이지를 통해 확인 가능합니다.</em></small>
                             <hr>
                         </div>
                         <div class="clearfix"></div>
-                        <small>멋쟁이 사자처럼 at 충남대학교</small>            
+                        <small>자세한 사항을 알아보거나 궁금한 것은 아래 페이스북 페이지를 통해 확인 가능합니다.</small>            
                     </div>
                         <div class="row">
                             <a href="https://www.facebook.com/likelioncnu"><i class="fa fa-facebook"></i></a>
