--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                             <hr>
                         </div>
                         <div class="clearfix"></div>
-                        <small>자세한 사항을 알아보거나 궁금한 것은 아래 페이스북 페이지를 통해 확인 가능합니다.</small>            
+                        <small>자세한 사항이나 궁금한 것은 아래 페이스북 페이지를 통해 확인 가능합니다.</small>            
                     </div>
                         <div class="row">
                             <a href="https://www.facebook.com/likelioncnu"><i class="fa fa-facebook"></i></a>
