이미지 확장자 대문자로 수정
이미지 확장자 대문자로 수정

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div id="clients" class="owl-carousel owl-theme">
                     <div class="portfolio-item">
 
-                                <img src="img/sponsers/sponsers.png" alt="...">
+                                <img src="img/sponsers/sponsers.PNG" alt="...">
 
                     </div>
                 </div>
