--- a/index.html
+++ b/index.html
@@ -177,13 +177,7 @@
                         <hr>
                     </div>
                 </div>
-                <div id="clients" class="owl-carousel owl-theme">
-                    <div class="portfolio-item">
-
-                                <img src="img/sponsers/sponsers.PNG" alt="...">
-
-                    </div>
-                </div>
+                <img id="sponsers-img" src="img/sponsers/sponsers.PNG" alt="...">
             </div>
         </div>
     </div>
@@ -223,6 +217,18 @@
                                 <h5>짧은시간으로 부족한 점도 있지만 눈 앞의 결과물을 보고 나서</h5>
                                 <h5>'정말 할 수 있는구나'라는 생각을 가지게 됐습니다. ㅎㅎ</h5>
                                 <p><strong>김호현</strong>, 경영학과</p>
+                            </div>
+
+                            <div class="item">
+                                <h5>전공자였지만 학교에서 서비스를 처음부터 끝까지 만들고 운영해본 경험은 없었습니다.</h5>
+                                <h5>멋사를 통해 좋은 팀원과 값진 경험을 얻을 수 있었습니다.</h5>
+                                <p><strong>임정아</strong>, 천문우주과학과</p>
+                            </div>
+
+                            <div class="item">
+                                <h5>비전공자라 웹사이트를 만드는 것에는 아무런 지식이 없었지만, 멋쟁이 사자처럼을 통해서 여러가지를 배웠어요!</h5>
+                                <h5> 저랑은 전혀 관련이 없다고 생각되던 창업이라는 것에도 관심을 가졌고요!</h5>
+                                <p><strong>이종찬</strong>, 천문우주과학과</p>
                             </div>
                         </div>
                     </div>
