--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
                             <div class="item">
                                 <h5>전공자였지만 학교에서 서비스를 처음부터 끝까지 만들고 운영해본 경험은 없었습니다.</h5>
                                 <h5>멋사를 통해 좋은 팀원과 값진 경험을 얻을 수 있었습니다.</h5>
-                                <p><strong>임정아</strong>, 천문우주과학과</p>
+                                <p><strong>임정아</strong>, 컴퓨터공학과</p>
                             </div>
 
                             <div class="item">
-                                <h5>비전공자라 웹사이트를 만드는 것에는 아무런 지식이 없었지만, 멋쟁이 사자처럼을 통해서 여러가지를 배웠어요!</h5>
-                                <h5> 저랑은 전혀 관련이 없다고 생각되던 창업이라는 것에도 관심을 가졌고요!</h5>
-                                <p><strong>이종찬</strong>, 천문우주과학과</p>
+                                <h5>어렵게만 느껴졌던 코딩을 너무나 쉽게 배울 수있어서 좋았고,</h5>
+                                <h5>평소 만들고 싶었던 나만의 서비스를 만들어서 부모님과 친구들에게 자랑했던 점은 큰 경험이였습니다.</h5>
+                                <p><strong>오종민</strong>, 컴퓨터공학과</p>
                             </div>
                         </div>
                     </div>
