--- a/index.html
+++ b/index.html
@@ -253,9 +253,15 @@
                         <div class="clearfix"></div>
                         <small>자세한 사항이나 궁금한 것은 아래 페이스북 페이지를 통해 확인 가능합니다.</small>
                     </div>
-                        <div class="row">
-                            <a href="https://www.facebook.com/likelioncnu"><i class="fa fa-facebook"></i></a>
-                        </div>
+                    <div class="row">
+                        <a href="https://www.facebook.com/likelioncnu">멋쟁이 사자처럼 충남대 - 페이스북</a>
+                    </div>
+                    <div class="row">
+                        <a href="http://likelion.org/">멋쟁이 사자처럼 - 홈페이지</a>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.facebook.com/likelion.net/">멋쟁이 사자처럼 - 페이스북</a>
+                    </div>
 
 
                 </div>
