--- a/5th/index.html
+++ b/5th/index.html
@@ -342,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; CNU LIKELION 5TH. Design: <a href="https://html5up.net">HTML5 UP</a>. Background Image: <a href="https://unsplash.com">UNSPLASH</a>.</p>
 					</footer>
 
 			</div>
