--- a/5th/index.html
+++ b/5th/index.html
@@ -29,9 +29,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p><!--[-->A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<!--]--><br />
-								<!--[-->for free under the <a href="https://html5up.net/license">Creative Commons</a> license.<!--]--></p>
+								<h1>CNU LIKELION 5TH</h1>
+								<p><!--[-->충남대학교 학생들이 만들고 싶은 IT 서비스를<!--]--><br />
+								<!--[-->직접 배워서 직접 만듭니다<!--]--></p>
 							</div>
 						</div>
 						<nav>
