--- a/5th/index.html
+++ b/5th/index.html
@@ -10,8 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		
-		<link rel="shortcut icon" href="5th/images/favicon.ico" type="image/x-icon">
-		<link rel="apple-touch-icon" href="5th/images/favicon.ico">
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="apple-touch-icon" href="images/favicon.ico">
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
