--- a/5th/index.html
+++ b/5th/index.html
@@ -30,8 +30,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>CNU LIKELION 5TH</h1>
-								<p><!--[-->충남대학교 학생들이 만들고 싶은 IT 서비스를<!--]--><br />
-								<!--[-->직접 배워서 직접 만듭니다<!--]--></p>
+								<p><!--[-->Learn it, and Build it<!--]--></p>
 							</div>
 						</div>
 						<nav>
