--- a/5th/index.html
+++ b/5th/index.html
@@ -53,8 +53,8 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>전국적으로 확대된 지난 멋쟁이사자 처럼은 이제 각 대학별로 운영됩니다. 충남대학교의 비전공 학생들과 전공 학생들이 함께 어울려 웹서비스 개발을 배우고 만들고 직접 서비스합니다.</p>
-								<p>HTML/CSS/JAVASCRIPT를 이용한 웹 프로그래밍의 기초부터 jQuery와 같은 다양한 프론트엔드 라이브러리 및 프레임워크에 대한 스터디를 진행하고 Ruby On Rails와 Amazon Web Service를 이용한 웹 서비스 배포과정을 학습합니다.</p>
+								<p style="font-family: 'Noto Sans Kr';">전국적으로 확대된 지난 멋쟁이사자 처럼은 이제 각 대학별로 운영됩니다. 충남대학교의 비전공 학생들과 전공 학생들이 함께 어울려 웹서비스 개발을 배우고 만들고 직접 서비스합니다.</p>
+								<p style="font-family: 'Noto Sans Kr';">HTML/CSS/JAVASCRIPT를 이용한 웹 프로그래밍의 기초부터 jQuery와 같은 다양한 프론트엔드 라이브러리 및 프레임워크에 대한 스터디를 진행하고 Ruby On Rails와 Amazon Web Service를 이용한 웹 서비스 배포과정을 학습합니다.</p>
 							</article>
 
 						<!-- Intro -->
